# training_service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.yml
.github/workflows/: main.yml
project/project/: template_settings.py  urls.py
project/training_service/: admin.py  apps.py  config.py  controllers.py  models.py  serializers.py  urls.py  views.py
project/training_service/admin/: __init__.py  answer_choice.py  question.py  response_history.py  test.py  user_app.py
project/training_service/migrations/: 0001_initial.py  0002_alter_answerchoice_question_alter_comment_question_and_more.py  0003_responsehistory_question.py  0004_rename_theory_comment_text.py
project/training_service/models/: __init__.py  answer_choice.py  comment.py  question.py  response_history.py  test.py  topic.py
project/training_service/tests/: base.py
project/training_service/tests/tests_controllers/: tests_question.py
project/training_service/tests/tests_models/: tests_answer_choice.py  tests_comment.py  tests_question.py  tests_response_history.py  tests_test.py  tests_topic.py
project/training_service/tests/tests_serializers/: tests_result_question.py
project/training_service/tests/tests_views/: base.py  tests_question.py  tests_test.py  tests_topic.py
project/users/: admin.py  managers.py  models.py  tests.py
project/users/migrations/: 0001_initial.py
